--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -9,7 +9,7 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    <h1>Admin Dashboard Works!</h1>
+    <h1>Admin Dashboard</h1>
     <p>Welcome, @ViewBag.UserName</p>
     <a href="/Account/Logout">Logout</a>
 </body>
